fix image stretch

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -344,7 +344,6 @@ header {
     width: 41%;
   }
   width: auto;
-  height: max-content;
   padding-bottom: 2rem;
 }
 .frontpage-goals-grid .frontpage-goals-grid-title {
@@ -393,7 +392,6 @@ header {
   }
   .card-img-top{
     width: 100%;
-    height: max-content;
   } 
 }
 .card:hover {
